  getToken() (a new method).
- The AuthToken constructor now takes a username and a token string.
- AuthToken.toString() now returns a string representation of the AuthToken
  object. Use getToken() to retrieve the token string.
- Tokens are now cached for at most 5 minutes and getting a token does not
  reset the expiration time.
  
NEW FEATURES:
- The AuthConfig object now has a withToken method, which can be used to set
  a standard token instead of a refreshing token for querying users.


VERSION 0.3.2 (Released 6/9/16)
-------------------------------

BUG FIXES
- Globus token lifetime changed back to previous value, so duplicated in
  Authtoken class.
- Made RefreshingToken.getToken() synchronized.

VERSION 0.3.1 (Released 5/15/15)
------------------------------------------

BUG FIXES
- Fix for KBASE-2024 - looking up user info from Globus used a URL based on
  the group path (i.e. /groups/[groupid]/members/[userid]), but not all kbase
  users are in the kbase users group, thus WS sharing breaks for about 1/10th of
  users which need to verify that the user account exists.  The URL was switched
  to /users/[userid], which returns a user record regardless of group affiliation. 


VERSION 0.3.0 (Released 4/8/15)
------------------------------------------

NEW FEATURES
- Added a new class, ConfigurableAuthService, that is instantiable and
  configurable. Restored the prior behavior to the AuthService class.

VERSION 0.2.0 (Released 4/8/15) DEPRECATED - use 0.3.0
------------------------------------------

NEW FEATURES
- The auth client is now instantiable rather than static.
- The auth client may now be configured with endpoint URLs and the Globus group
  to query for users.
- The client can now produce a token that refreshes itself periodically.
- The client can be configured with a token to use for all user queries. In
  most cases this should be an administrator of the kbase group, since if users