@@ -1,7 +1,5 @@
 package us.kbase.auth;
 
-import java.util.List;
-
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 /**
@@ -14,38 +12,14 @@ import com.fasterxml.jackson.annotation.JsonProperty;
  *
  */
 public class AuthUser {
-	@JsonProperty("verified")
-	private boolean emailValidated = false;
 	@JsonProperty("user_id")
 	private String userId = null;
 	private String email = null;
-	private List<String> groups = null;
 	private String fullName = null;
-	@JsonProperty("kbase_sessionid")
-	private String kbaseSession = null;
-	private String errorMessage = null;
 	private AuthToken token = null;
-	@JsonProperty("opt_in")
-	private boolean optIn = false;
-	@JsonProperty("system_admin")
-	private boolean systemAdmin = false;
 
 	private AuthUser() { }
 
-	@JsonProperty("opt_in")
-	public boolean hasOptIn() {
-		return optIn;
-	}
-	
-	@JsonProperty("system_admin")
-	public boolean isSystemAdmin() {
-		return systemAdmin;
-	}
-	
-	@JsonProperty("verified")
-	public boolean isEmailValidated() {
-		return emailValidated;
-	}
 	@JsonProperty("user_id")
 	public String getUserId() {
 		return userId;
@@ -73,38 +47,9 @@ public class AuthUser {
 		return token.getToken();
 	}
 	
-	@JsonProperty("groups")
-	public List<String> getGroups() {
-		return groups;
-	}
-	
-
 	@JsonProperty("name")
 	public String getFullName() {
 		return fullName;
 	}
 	
-	@JsonProperty("kbase_sessionid")
-	public String getSessionId() {
-		return kbaseSession;
-	}
-
-	@JsonProperty("error_msg")
-	public String getErrorMessage() {
-		return errorMessage;
-	}
-
-	public String toString() {
-		StringBuffer buf = new StringBuffer();
-		buf.append("user id: " + userId + "\n");
-		buf.append("full name: " + fullName + "\n");
-		buf.append("email validated: " + emailValidated + "\n");
-		buf.append("email: " + email + "\n");
-		buf.append("groups: " + groups + "\n");
-		buf.append("session id: " + kbaseSession + "\n");
-		buf.append("token: " + token.toString() + "\n");
-		buf.append("sysadmin: " + systemAdmin + "\n");
-		buf.append("opt_in: " + optIn + "\n");
-		return buf.toString();
-	}
 }
